--- a/hello-kafka/src/main/resources/application.yml
+++ b/hello-kafka/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
       bootstrap-servers: 192.168.1.210:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+app:
+  topic:
+    users: users
+  consumer:
+    groupid: group_id_01
